дійшла до футера

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
         </div>        
     </header>
     <main class="main">
-        <!--<section class="section-portfolio section">
+        <section class="section-portfolio section">
             <div class="container">                
                     <h1 class="hero-title title visually-hidden">Фильтри</h1>
                     <ul class="section-portfolio__list-filter">
@@ -67,7 +67,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                             <div class="portfolio-thumb">
-                                <img class="portfolio-thumb__image" src="./images/project1.jpg" width="370" height="294" alt="Проект 1 Веб-сайт Технокряк">
+                                <!--<img class="portfolio-thumb__image" src="./images/project1.jpg" width="370" height="294" alt="Проект 1 Веб-сайт Технокряк">-->
+                                <picture>
+                                    <source
+                                    srcset="./images/project1-desktop.jpg 1x, ./images/project1-desktop@2x.jpg 2x"
+                                    media="(min-width: 1200px)"
+                                    />
+                                    <source
+                                    srcset="./images/project1-tablet.jpg 1x, ./images/project1-tablet@2x.jpg 2x"
+                                    media="(min-width: 768px)"
+                                    />
+                                    <source
+                                    srcset="./images/project1-mobile.jpg 1x, ./images/project1-mobile@2x.jpg 2x"
+                                    media="(max-width: 767px)"
+                                    />
+                                    <img class="portfolio-thumb__image" src="./images/project1-mobile.jpg" alt="Проект 1 Веб-сайт Технокряк" />
+                                </picture>    
                                 <div class="portfolio-thumb-overlay">
                                     <p class="portfolio-thumb-overlay__description">
                                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -84,7 +99,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project2.jpg" width="370" height="294" alt="Проект 2 Дизайн Постер New Orlean vs Golden Star">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project2.jpg" width="370" height="294" alt="Проект 2 Дизайн Постер New Orlean vs Golden Star">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project2-desktop.jpg 1x, ./images/project2-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project2-tablet.jpg 1x, ./images/project2-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project2-mobile.jpg 1x, ./images/project2-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project2-mobile.jpg" alt="Проект 2 Дизайн Постер New Orlean vs Golden Star" />
+                                    </picture>  
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -100,7 +130,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project3.jpg" width="370" height="294" alt="Проект 3 Приложение Ресторан Seafood">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project3.jpg" width="370" height="294" alt="Проект 3 Приложение Ресторан Seafood">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project3-desktop.jpg 1x, ./images/project3-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project3-tablet.jpg 1x, ./images/project3-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project3-mobile.jpg 1x, ./images/project3-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project3-mobile.jpg" alt="Проект 3 Приложение Ресторан Seafood" />
+                                    </picture>  
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -116,7 +161,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project4.jpg" width="370" height="294" alt="Проект 4 Маркетинг Проект Prime">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project4.jpg" width="370" height="294" alt="Проект 4 Маркетинг Проект Prime">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project4-desktop.jpg 1x, ./images/project4-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project4-tablet.jpg 1x, ./images/project4-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project4-mobile.jpg 1x, ./images/project4-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project4-mobile.jpg" alt="Проект 4 Маркетинг Проект Prime" />
+                                    </picture>  
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -132,7 +192,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project5.jpg" width="370" height="294" alt="Проект 5 Приложение Проект Boxes">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project5.jpg" width="370" height="294" alt="Проект 5 Приложение Проект Boxes">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project5-desktop.jpg 1x, ./images/project5-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project5-tablet.jpg 1x, ./images/project5-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project5-mobile.jpg 1x, ./images/project5-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project5-mobile.jpg" alt="Проект 5 Приложение Проект Boxes" />
+                                    </picture>  
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -148,7 +223,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project6.jpg" width="370" height="294" alt="Проект 6 Веб-сайт Inspiration has no Borders">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project6.jpg" width="370" height="294" alt="Проект 6 Веб-сайт Inspiration has no Borders">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project6-desktop.jpg 1x, ./images/project6-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project6-tablet.jpg 1x, ./images/project6-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project6-mobile.jpg 1x, ./images/project6-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project6-mobile.jpg" alt="Проект 6 Веб-сайт Inspiration has no Borders" />
+                                    </picture>  
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -164,7 +254,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project7.jpg" width="370" height="294" alt="Проект 7 Дизайн Издание Limited Edition">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project7.jpg" width="370" height="294" alt="Проект 7 Дизайн Издание Limited Edition">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project7-desktop.jpg 1x, ./images/project7-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project7-tablet.jpg 1x, ./images/project7-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project7-mobile.jpg 1x, ./images/project7-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project7-mobile.jpg" alt="Проект 7 Дизайн Издание Limited Edition" />
+                                    </picture> 
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -180,7 +285,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project8.jpg" width="370" height="294" alt="Проект 8 Маркетинг Проект LAB">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project8.jpg" width="370" height="294" alt="Проект 8 Маркетинг Проект LAB">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project8-desktop.jpg 1x, ./images/project8-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project8-tablet.jpg 1x, ./images/project8-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project8-mobile.jpg 1x, ./images/project8-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project8-mobile.jpg" alt="Проект 8 Маркетинг Проект LAB" />
+                                    </picture> 
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -196,7 +316,22 @@
                         <li class="section-portfolio__item-project">
                             <a class="section-portfolio__link">
                                 <div class="portfolio-thumb">
-                                    <img class="portfolio-thumb__image" src="./images/project9.jpg" width="370" height="294" alt="Проект 9 Приложение Growing Business">
+                                    <!--<img class="portfolio-thumb__image" src="./images/project9.jpg" width="370" height="294" alt="Проект 9 Приложение Growing Business">-->
+                                    <picture>
+                                        <source
+                                        srcset="./images/project9-desktop.jpg 1x, ./images/project9-desktop@2x.jpg 2x"
+                                        media="(min-width: 1200px)"
+                                        />
+                                        <source
+                                        srcset="./images/project9-tablet.jpg 1x, ./images/project9-tablet@2x.jpg 2x"
+                                        media="(min-width: 768px)"
+                                        />
+                                        <source
+                                        srcset="./images/project9-mobile.jpg 1x, ./images/project9-mobile@2x.jpg 2x"
+                                        media="(max-width: 767px)"
+                                        />
+                                        <img class="portfolio-thumb__image" src="./images/project9-mobile.jpg" alt="Проект 9 Приложение Growing Business" />
+                                    </picture> 
                                     <div class="portfolio-thumb-overlay">
                                         <p class="portfolio-thumb-overlay__description">
                                             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
@@ -211,10 +346,10 @@
                         </li>
                     </ul>            
             </div>            
-        </section>-->
+        </section>
     </main>
     <footer class="footer">
-        <!--<div class="container container-footer">
+        <div class="container container-footer">
             <div class="footer__inner">
                 <a class="footer__logo" href="/index.html">Web<span class="logo-footer-text">Studio</span></a>
                 <address class="footer-contacts">
@@ -277,10 +412,9 @@
                             <use href="./images/icons.svg#icon-icon-send"></use>
                         </svg>
                     </div>
-                </form>                           
-                
+                </form>                          
             </div>
-        </div>-->       
+        </div>      
     </footer>    
 </body>
 </html>
